--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -44,4 +44,7 @@
             }
         }
     </style>
+
+    {{ template "_internal/google_analytics.html" . }}
+    {{ template "_internal/google_analytics_async.html" . }}
 </head>
