WIP change site footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -36,7 +36,7 @@
     </div>
     <div class="py-6 text-sm text-center text-amber-200">
         Carrossé par <a href="https://tailwindcss.com/" class="underline hover:no-underline">Tailwind CSS</a> & <a
-            href="https://thierrycharriot.github.io" class="underline hover:no-underline">Thierry Charriot</a>. Motorisé
+            href="https://thierrycharriot.fr" class="underline hover:no-underline">Thierry Charriot</a>. Motorisé
         par <a href="https://gohugo.io/" class="underline hover:no-underline">Hugo</a>
     </div>
 </footer>
