--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,7 +22,7 @@
         <section class="parallax" style="background-image: url('{{ .Site.Params.parallax2 | relURL }}');">
         </section>
         <section class="container mx-auto p-6">
-            <h2 class="text-3xl text-green-300 font-bold text-center">Certificats</h2>
+            <h2 class="text-3xl text-green-300 font-bold text-center">Formations</h2>
 
             <!-- https://ordinarycoders.com/blog/article/17-tailwindcss-cards -->
             <div class="p-10 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-5">
