WIP change title

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,7 @@
     <article class="lg:px-0">
 
         <section class="parallax" style="background-image: url('{{ .Site.Params.parallax1 | relURL }}');">
-            <h1 class="title text-yellow-300 font-bold text-6xl">Développeur web web mobile</h1>
+            <h1 class="title text-yellow-300 font-bold text-6xl">Développeur Web Web Mobile</h1>
         </section>
         <section class="container mx-auto p-6 flex flex-col">
             <h2 class="text-3xl text-green-300 font-bold text-center p-6">Thierry Charriot</h2>
