--- a/assets/src/input.css
+++ b/assets/src/input.css
@@ -42,6 +42,10 @@ h5 { font-size: 1.125rem; /* 18px */ line-height: 1.75rem; /* 28px */ }
     background-repeat: no-repeat;
 }
 
+.parallax-15 {
+    height: 15vh
+}
+
 .certificates {
     width: 96px;
     height: 96px;
