--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,7 +19,7 @@
             </a>
         </section>
           
-        <section class="parallax" style="background-image: url('{{ .Site.Params.parallax2 | relURL }}');">
+        <section class="parallax parallax-15" style="background-image: url('{{ .Site.Params.parallax2 | relURL }}');">
         </section>
         <section class="container mx-auto p-6">
             <h2 class="text-3xl text-green-300 font-bold text-center">Formations</h2>
@@ -77,7 +77,7 @@
             </div>
         </section>
 
-        <section class="parallax" style="background-image: url('{{ .Site.Params.parallax3 | relURL }}');">
+        <section class="parallax parallax-15" style="background-image: url('{{ .Site.Params.parallax3 | relURL }}');">
         </section>
     </article>
 
